--- a/assets/ccs/styles.css
+++ b/assets/ccs/styles.css
@@ -1,5 +1,11 @@
 body {
      background-color: lightgrey;
-     /*background-image: url ("../images/background-img.jpg");*/
+     background-image: url ("../images/background-img.jpg");
+
+ }
+ p {
+     font-weight: bold;
+ }
+
+
      
-}
